# hsk-dl

./: .gitignore  README.md  fourmolu.yaml  hsk-dl.cabal  stack.yaml  torch-haskell.cabal
.github/workflows/: haskell.yml
app/: DemoMnist.hs  DemoXor.hs
docs/: ADR-0001-scope.md  STYLE.md
src/: Error.hs
src/Core/: Init.hs  Random.hs  Shape.hs  Stride.hs  Tensor.hs
src/NN/: Layer.hs  Loss.hs
src/NN/Optim/: SGD.hs
test/: GradlessSpec.hs  ShapeSpec.hs  Spec.hs  TensorSpec.hs
