cabal-version:      2.4
name:               hsk-dl
version:            0.1.0.0
license:            BSD-3-Clause
author:             Daniil Diveev
maintainer:         daniildiveev@yandex.ru
build-type:         Simple
extra-source-files: README.md, docs/ADR-0001-scope.md, docs/STYLE.md

flag with-blas
  description: Enable BLAS backend (OpenBLAS/MKL) for mm/matmul
  default: False
  manual: True

common common-settings
  default-language: Haskell2010
  ghc-options:
    -O2 -Wall -Wcompat -Wredundant-constraints -Wpartial-fields
    -funbox-strict-fields
  default-extensions:
    BangPatterns
    ScopedTypeVariables
    DeriveGeneric
    GeneralizedNewtypeDeriving
    TypeApplications

library
  import: common-settings
  hs-source-dirs: src
  exposed-modules:
      Core.Tensor
    , Core.Shape
    , Core.Stride
    , Core.Init
    , Core.Random
    , NN.Layer
    , NN.Loss
    , NN.Optim.SGD
    , Error
  build-depends:
      base >=4.14 && <5
    , containers
    , random

test-suite hsk-dl-test
  import: common-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs

  other-modules:
        TensorSpec
      , ShapeSpec
      , GradlessSpec

  build-depends:
      base
    , hspec >=2.7
    , QuickCheck >=2.14
    , hsk-dl
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

executable demo
  import: common-settings
  hs-source-dirs: app
  main-is: DemoXor.hs
  build-depends: base, hsk-dl
